style.css
/* ... */
.no-top-border {
	border-top: none;
}

.widget .button {
	padding: 1em 0;
}

/* ---- Widgets ---- */
.staff-widget {
	float: left;
	width: 30%;
	margin-right: 5%;
}

.entry-content .staff-widget .textwidget,
.entry-content .sidebar-staff-widget .textwidget {
	font-size: 12px ;
	line-height: 1.5;
}

.staff-widget.last {
	margin-right: 0;
}

.staff-widget .widget-title {
	display: none;
}

.staff-widget h3,
.staff-widget h4,
.sidebar-staff-widget h3,
.sidebar-staff-widget h4 {
	margin: 0;
	padding: 0;
	line-height: 1.5;
	font-size: 16px;
}

.staff-widget h3,
.sidebar-staff-widget h3 {
	font-weight: 600;
}

.staff-widget h4,
.sidebar-staff-widget h4 {
	padding-bottom: 10px;
}

a.px14 {
	font-size: 14px;
}

/* ---- Ultimate Posts Widget styles ---- */
.upw-posts h4 a {
	font-size: 18px;
	color: #111;
	font-weight: 600;
}

.widget_ultimate_posts .upw-posts .entry-meta,
.widget_ultimate_posts .upw-posts .entry-meta a {
	color: #ababab;
	font-size: 12px;
}

.widget_ultimate_posts .upw-content span {
	display: inline-block;
	margin-right: 10px;
}

.widget_ultimate_posts .upw-posts .post {
	box-shadow: none;
}

.widget_ultimate_posts .upw-posts .post:after {
	background: none;
	margin: 0;
}

.widget_ultimate_posts .upw-posts article {
	border-bottom: none;
}

.upw-content img {
	float: left;
	padding: 0 20px 5px 0;
	position: relative;
	top: 5px;
}

.widget_ultimate_posts .upw-content p {
	color: #5c5c5c;
	font-size: 16px;
}

.upw-content .entry-custom-fields {
	margin-left: 0px;
}

.upw-content .custom-field-event_date {
	color: #F58733;
	font-weight: bold;
}

.upw-content .custom-field-event_date:before {
	margin-right: 5px;
	font-family:FontAwesome;
	content:"\f073" !important;
	color: #F58733;
	font-size: 1em;	
}

.upw-content .custom-field-event_start_time,
.upw-content .custom-field-event_end_time {
	color: #ababab;
	font-weight: bold;
}

.widget_ultimate_posts .upw-content .custom-field-event_start_time {
	margin-right: 0;
}

.upw-content .custom-field-event_end_time:before {
	content: "-";
}

/* ---- Exhibits Styles ---- */
.exhibits-feed {
	margin-left: -27.5px;
	margin-bottom: 50px;
}

.childTheme .exhibits-feed .category-init {
	background: #333;
	border-radius: 27.5px;
	-moz-border-radius: 27.5px;
	-webkit-border-radius: 27.5px;
	color: #cbcbcb;
	display: inline-block;
	line-height: 55px;
	text-align: center;
	width: 55px;
	position: absolute;
	z-index: 10000 !important;
	font-size: 32px;
	font-weight: 300;
	margin-top: 10px; 
 }

.childTheme .exhibits-feed .cat-name {
	font-weight: 600;
	margin-left: 65px;
	font-size: 16px;
	position: relative;
	top: 5px;
}

.category-image {
	width: 200px;
	height: 300px;
	background-repeat: no-repeat; 
	background-position: center center;
}

.category-post {
	border-top: 8px solid #333;
	background: #eee;
	margin-left: 27.5px;
	margin-bottom: 0;
	position: relative;
	top: 10px;
	-webkit-box-shadow: 0px 1px 3px rgba(0,0,0,0.75);
	-moz-box-shadow: 0px 1px 3px rgba(0,0,0,0.75);
	box-shadow: 0px 1px 3px rgba(0,0,0,0.75);
}

.category-post-content {
	padding: 15px;
}

.category-post-content p {
	font-size: 14px;
	line-height: 1.5;
}

h4 a.exhibit-title {
	padding-bottom: 0;
	font-size: 18px;
	color: #333;
	font-weight: 600;
	line-height: 1.5;
}

h3.exhibits {
	font-size: 16px;
	font-weight: 400;
	text-transform: uppercase;
	line-height: 3;
	color: #777;
}

.exhibits-feed-section {
	margin: 0 0 100px;
}

.sub-title {
	font-size: 16px;
}

.exhibit-ends {
	position: absolute;
	bottom: 15px;
	left: 215px;
	text-transform: uppercase;
	font-size: 13px;
}

.date-span {
	font-weight: 600;
}

.sponsored-content {
	color: #777;
}

.sponsored-excerpt {
	background: #cbcbcb;
	padding: 10px 15px;
	-webkit-box-shadow: inset 0px 10px 10px -5px rgba(0,0,0,.4);
    box-shadow: inset 0px 10px 10px -5px rgba(0,0,0,.4);
    margin: 10px 0 0 27.5px;
	font-size: 13px;
	font-weight: 600;
}

/* ---- Fields, Inputs, Buttons etc. ---- */
.buttons {
	margin: 50px 0px;
}

.entry-content .button-set {
	display: inline ;
}

.button-set:first-child {
	margin-right: 5%;
}

.button.full-width {
	min-width: 100%;
}

.search input[type="text"] {
	height:auto;
	line-height:1.5;
	margin:0;
}

/* ---- Gallery Styles ---- */
.childTheme .wp-caption .wp-caption-text,
.childTheme .gallery-caption,
.childTheme .entry-caption {
	text-align: left;
	font-style: normal;
	font-size: 12px;
	line-height: 1.5;
	color: #111;
}

.childTheme .gallery .gallery-icon img {
	height: auto;
	max-width: 100%;
	padding: 0 !important;
	border: 0 !important;
}

/* ---- Responsive Styles ---- */
@media screen and (max-width:720px) {
	.childTheme .navbar-collapse { /* Removes scroll on mobile */
		padding-left: 15px ;
		padding-right: 15px ;
	}
	
	.mobile-display {
		display: block ;
	}

	.childTheme .main-content,	
	.childTheme .has-sidebar .main-content,
	.childTheme .has-sidebar .sidebar {
		padding: 0 5%;
		width: 100%;
		margin-bottom: 50px;
	}
	
	ul.nav li.dropdown:hover > ul.dropdown-menu {
	    display: block;    
		left: auto;
		opacity: 1;
	}
	
	.childTheme .dropdown-menu {
	    position: relative;
	    top: 100%;
	    left: 0;
	    z-index: 1000;
	    display: none;
	    float: none;
	    min-width: 100%;
	    padding: 5px 0;
	    margin: 2px 0 0;
	    font-size: 14px;
	    list-style: none;
	    background-color: #fff;
	    border: 1px solid #ccc;
	    border: 1px solid rgba(0,0,0,0.15);
	    border-radius: 0;
	    -webkit-box-shadow: none;
	    box-shadow: none;
	    background-clip: padding-box;
	}
	
	.childTheme	.dropdown-menu>li>a {
	    display: block;
	    padding: 8px 40px;
	    clear: both;
	    font-weight: normal;
	    color: #333;
	    white-space: nowrap;
	}
	
	.childTheme .entry-content,
	.has-sidebar .main-content {
		padding: 0;
	}
}
/* ... */

